--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixi-scrollbox",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
   "main": "dist/scrollbox.js",
   "directories": {
@@ -11,7 +11,7 @@
     "build-demo": "./node_modules/.bin/browserify docs/code.js -o docs/index.js",
     "docs": "./node_modules/.bin/jsdoc -c .jsdoc.json",
     "standalone": "./node_modules/.bin/browserify docs/standalone.js -o docs/library.js -t [ babelify ]",
-    "transpile": "./node_modules/.bin/babel src/ --out-dir dist --source-maps inline",
+    "transpile": "./node_modules/.bin/babel src/ --out-dir dist --source-maps inline && cp src/defaults.json dist/defaults.json",
     "prepublishOnly": "npm run transpile && npm run build-demo && npm run docs"
   },
   "repository": {
