--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "pixi-scrollbox",
-  "version": "0.2.0",
+  "version": "1.1.0",
   "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
-  "main": "dist/scrollbox.js",
+  "browser": "dist/scrollbox.js",
   "directories": {
     "doc": "docs"
   },
   "scripts": {
-    "test": "./node_modules/.bin/budo docs/code.js:index.js --dir docs --live",
-    "build-demo": "./node_modules/.bin/browserify docs/code.js -o docs/index.js",
-    "docs": "./node_modules/.bin/jsdoc -c .jsdoc.json",
-    "standalone": "./node_modules/.bin/browserify docs/standalone.js -o docs/library.js -t [ babelify ]",
-    "transpile": "./node_modules/.bin/babel src/ --out-dir dist --source-maps inline && cp src/defaults.json dist/defaults.json",
-    "prepublishOnly": "npm run transpile && npm run build-demo && npm run docs"
+    "test": "budo docs/code.js:index.js --dir docs --live",
+    "build-demo": "browserify -o docs/index.js docs/code.js",
+    "docs": "jsdoc -c .jsdoc.json",
+    "bundle": "browserify dist/scrollbox.js -o bundle/scrollbox.js && uglifyjs -mc -o bundle/scrollbox.min.js dist/scrollbox.js",
+    "transpile": "babel src/ --out-dir dist --source-maps inline && cp src/defaults.json dist/defaults.json",
+    "prepublishOnly": "npm run transpile && npm run bundle && npm run build-demo && npm run docs"
   },
   "repository": {
     "type": "git",
@@ -36,8 +36,8 @@
   "dependencies": {
     "eventemitter3": "^3.1.0",
     "exists": "^1.0.1",
-    "pixi-ease": "^0.18.0",
-    "pixi-viewport": "^2.1.0"
+    "pixi-ease": "^1.0.2",
+    "pixi-viewport": "^2.2.1"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
@@ -49,6 +49,6 @@
     "yy-counter": "^2.1.0",
     "yy-fps": "^1.0.0",
     "yy-jsdoc-template": "^1.3.0",
-    "yy-random": "^1.6.0"
+    "yy-random": "^1.7.1"
   }
 }
