--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixi-scrollbox",
-  "version": "1.2.2",
+  "version": "1.2.3",
   "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
   "browser": "dist/scrollbox.js",
   "directories": {
@@ -31,21 +31,17 @@
   },
   "homepage": "https://github.com/davidfig/pixi-scrollbox#readme",
   "peerDependencies": {
+    "pixi-viewport": ">=3.12.0",
     "pixi.js": ">=4.6.0"
   },
-  "dependencies": {
-    "eventemitter3": "^3.1.0",
-    "exists": "^1.0.1",
-    "pixi-ease": "^1.0.2",
-    "pixi-viewport": "^2.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "clicked": "^2.0.0",
     "fork-me-github": "^1.2.0",
     "highlight.js": "^9.12.0",
+    "pixi-viewport": "^3.12.0",
     "pixi.js": "^4.8.0",
-    "settingspanel": "^2.0.0",
     "yy-counter": "^2.1.0",
     "yy-fps": "^1.0.0",
     "yy-jsdoc-template": "^1.3.0",
