--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pixi-scrollbox",
-  "version": "1.5.2",
+  "version": "1.5.3",
   "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
   "browser": "dist/scrollbox.js",
   "directories": {
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "budo docs/code.js:index.js --dir docs --live",
+    "upgrade": "yarn upgrade-interactive --latest",
     "build-demo": "browserify -o docs/index.js docs/code.js",
     "docs": "jsdoc -c .jsdoc.json",
     "bundle": "browserify dist/scrollbox.js -o bundle/scrollbox.js && uglifyjs -mc -o bundle/scrollbox.min.js dist/scrollbox.js",
@@ -35,15 +36,15 @@
     "pixi.js": ">=4.6.0"
   },
   "dependencies": {
-    "pixi-ease": "^1.1.2"
+    "pixi-ease": "^1.2.1"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
     "clicked": "^2.0.0",
     "fork-me-github": "^1.2.0",
-    "highlight.js": "^9.12.0",
-    "pixi-viewport": "^3.12.0",
-    "pixi.js": "^4.8.0",
+    "highlight.js": "^9.14.2",
+    "pixi-viewport": "^3.18.3",
+    "pixi.js": "^5.0.0-rc.2",
     "yy-counter": "^2.1.0",
     "yy-fps": "^1.0.0",
     "yy-jsdoc-template": "^1.3.0",
