--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
-  "name": "pixi-scrollbox",
-  "version": "1.6.0",
-  "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
-  "browser": "dist/scrollbox.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "scripts": {
-    "test": "budo docs/code.js:index.js --dir docs --live",
-    "upgrade": "yarn upgrade-interactive --latest",
-    "build-demo": "browserify -o docs/index.js docs/code.js",
-    "docs": "jsdoc -c .jsdoc.json",
-    "bundle": "browserify dist/scrollbox.js -o bundle/scrollbox.js && uglifyjs -mc -o bundle/scrollbox.min.js dist/scrollbox.js",
-    "transpile": "babel src/ --out-dir dist --source-maps inline && cp src/defaults.json dist/defaults.json",
-    "prepublishOnly": "yarn run transpile && yarn run bundle && yarn run build-demo && yarn run docs"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/davidfig/pixi-scrollbox.git"
-  },
-  "keywords": [
-    "PIXI",
-    "pixi.js",
-    "scrollbox",
-    "UI"
-  ],
-  "author": "David Figatner",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/davidfig/pixi-scrollbox/issues"
-  },
-  "homepage": "https://github.com/davidfig/pixi-scrollbox#readme",
-  "peerDependencies": {
-    "pixi-viewport": ">=3.12.0",
-    "pixi.js": ">=4.6.0"
-  },
-  "dependencies": {
-    "pixi-ease": "^1.3.0"
-  },
-  "devDependencies": {
-    "babel-preset-env": "^1.7.0",
-    "clicked": "^2.0.0",
-    "fork-me-github": "^1.2.0",
-    "highlight.js": "^9.14.2",
-    "pixi-viewport": "^3.20.0",
-    "pixi.js": "^5.0.0-rc.2",
-    "yy-counter": "^2.1.0",
-    "yy-fps": "^1.0.0",
-    "yy-jsdoc-template": "^1.3.0",
-    "yy-random": "^1.7.1"
-  }
+    "name": "pixi-scrollbox",
+    "version": "1.6.1",
+    "description": "pixi.js scrollbox: a masked box that can scroll vertically or horizontally with scrollbars",
+    "browser": "dist/scrollbox.js",
+    "main": "dist/scrollbox.js",
+    "directories": {
+        "doc": "docs"
+    },
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "test": "budo docs/code.js:index.js --dir docs --live",
+        "upgrade": "yarn upgrade-interactive --latest",
+        "build-demo": "browserify -o docs/index.js docs/code.js",
+        "docs": "jsdoc -c .jsdoc.json",
+        "bundle": "browserify dist/scrollbox.js -o bundle/scrollbox.js && uglifyjs -mc -o bundle/scrollbox.min.js dist/scrollbox.js",
+        "transpile": "babel src/ --out-dir dist --source-maps inline && cp src/defaults.json dist/defaults.json",
+        "prepublishOnly": "yarn run transpile && yarn run bundle && yarn run build-demo && yarn run docs"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/davidfig/pixi-scrollbox.git"
+    },
+    "keywords": [
+        "PIXI",
+        "pixi.js",
+        "scrollbox",
+        "UI"
+    ],
+    "author": "David Figatner",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/davidfig/pixi-scrollbox/issues"
+    },
+    "homepage": "https://github.com/davidfig/pixi-scrollbox#readme",
+    "peerDependencies": {
+        "pixi-viewport": ">=3.12.0",
+        "pixi.js": ">=4.6.0"
+    },
+    "dependencies": {
+        "pixi-ease": "^1.3.0"
+    },
+    "devDependencies": {
+        "babel-preset-env": "^1.7.0",
+        "clicked": "^2.2.1",
+        "fork-me-github": "^1.2.0",
+        "highlight.js": "^9.15.8",
+        "pixi-viewport": "4.0.0-beta.2",
+        "pixi.js": "^5.0.4",
+        "yy-counter": "^2.1.0",
+        "yy-fps": "^1.1.0",
+        "yy-jsdoc-template": "^1.3.0",
+        "yy-random": "^1.8.0"
+    }
 }
