--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "dist"
     ],
     "scripts": {
-        "test": "budo docs/code.js:index.js --dir docs --live",
+        "test": "rollup -c rollup.dev.js --watch",
         "upgrade": "yarn upgrade-interactive --latest",
         "build-demo": "browserify -o docs/index.js docs/code.js",
         "docs": "jsdoc -c .jsdoc.json",
@@ -40,15 +40,22 @@
         "pixi.js": ">=4.6.0"
     },
     "dependencies": {
-        "pixi-ease": "^1.3.0"
+        "penner": "^0.1.3"
     },
     "devDependencies": {
-        "babel-preset-env": "^1.7.0",
+        "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
         "clicked": "^2.2.1",
         "fork-me-github": "^1.2.0",
-        "highlight.js": "^9.15.8",
-        "pixi-viewport": "4.0.0-beta.2",
-        "pixi.js": "^5.0.4",
+        "highlight.js": "^9.15.9",
+        "pixi-viewport": "4.1.4",
+        "pixi.js": "^5.1.1",
+        "rollup": "^1.17.0",
+        "rollup-plugin-commonjs": "^10.0.1",
+        "rollup-plugin-node-globals": "^1.4.0",
+        "rollup-plugin-node-resolve": "^5.2.0",
+        "rollup-plugin-peer-deps-external": "^2.2.0",
+        "rollup-plugin-serve": "^1.0.1",
+        "rollup-plugin-terser": "^5.1.0",
         "yy-counter": "^2.1.0",
         "yy-fps": "^1.1.0",
         "yy-jsdoc-template": "^1.3.0",
