--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "pixi-scrollbox",
-    "version": "2.0.0",
+    "version": "2.0.1",
     "description": "a scrollbox built for pixi.js using a masked box that scrolls vertically and/or horizontally with optional scrollbars",
     "browser": "dist/scrollbox.js",
     "main": "dist/scrollbox.js",
+    "module": "dist/scrollbox.es.js",
     "directories": {
         "doc": "docs"
     },
