--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
         "fork-me-github": "^1.2.0",
         "highlight.js": "^9.15.9",
         "jsdoc": "^3.6.3",
-        "pixi-viewport": "4.1.4",
+        "pixi-viewport": "^4.2.3",
         "pixi.js": "^5.1.1",
         "rollup": "^1.17.0",
         "rollup-plugin-commonjs": "^10.0.1",
