--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "pixi-scrollbox",
-    "version": "2.1.1",
+    "version": "2.1.2",
     "description": "a scrollbox built for pixi.js using a masked box that scrolls vertically and/or horizontally with optional scrollbars",
     "main": "dist/scrollbox.js",
     "module": "dist/scrollbox.es.js",
@@ -11,7 +11,7 @@
         "dist"
     ],
     "scripts": {
-        "test": "rollup -c rollup.dev.js --watch",
+        "start": "rollup -c rollup.dev.js --watch",
         "upgrade": "yarn upgrade-interactive --latest",
         "build-demo": "rollup -c docs/rollup.config.js",
         "docs": "jsdoc -c .jsdoc.json",
@@ -35,7 +35,7 @@
     },
     "homepage": "https://github.com/davidfig/pixi-scrollbox#readme",
     "peerDependencies": {
-        "pixi-viewport": ">=3.12.0",
+        "pixi-viewport": ">=4.3.4",
         "pixi.js": ">=4.6.0"
     },
     "dependencies": {
@@ -43,19 +43,19 @@
     },
     "devDependencies": {
         "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
-        "clicked": "^2.2.1",
+        "clicked": "^3.0.0",
         "fork-me-github": "^1.2.0",
-        "highlight.js": "^9.15.9",
+        "highlight.js": "^9.16.2",
         "jsdoc": "^3.6.3",
-        "pixi-viewport": "^4.2.3",
-        "pixi.js": "^5.1.1",
-        "rollup": "^1.17.0",
-        "rollup-plugin-commonjs": "^10.0.1",
+        "pixi-viewport": "^4.3.4",
+        "pixi.js": "^5.2.0",
+        "rollup": "^1.27.2",
+        "rollup-plugin-commonjs": "^10.1.0",
         "rollup-plugin-node-globals": "^1.4.0",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-peer-deps-external": "^2.2.0",
         "rollup-plugin-serve": "^1.0.1",
-        "rollup-plugin-terser": "^5.1.0",
+        "rollup-plugin-terser": "^5.1.2",
         "yy-counter": "^2.1.0",
         "yy-fps": "^1.1.0",
         "yy-jsdoc-template": "^1.3.0",
