--- a/package.json
+++ b/package.json
@@ -45,16 +45,16 @@
     },
     "devDependencies": {
         "@joseph184/rollup-plugin-node-builtins": "^2.1.4",
+        "@rollup/plugin-commonjs": "^17.0.0",
+        "@rollup/plugin-node-resolve": "^11.0.0",
         "clicked": "^3.0.0",
         "fork-me-github": "^1.2.0",
-        "highlight.js": "^9.16.2",
+        "highlight.js": "^10.4.0",
         "jsdoc": "^3.6.3",
         "pixi-viewport": "^4.3.4",
         "pixi.js": "^5.2.0",
-        "rollup": "^1.27.2",
-        "rollup-plugin-commonjs": "^10.1.0",
+        "rollup": "^2.34.0",
         "rollup-plugin-node-globals": "^1.4.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-peer-deps-external": "^2.2.0",
         "rollup-plugin-serve": "^1.0.1",
         "rollup-plugin-terser": "^5.1.2",
